5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1684_1100.log
== TEST (2019-04-23 21:03:23) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if:(a==2)and(b=tartaruga)
	print("entrada: "a)
	print("animal: "b)
-- ERROR:
File "XXXX", line 3
    if:(a==2)and(b=tartaruga)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:03:41) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if:(a==2)and(b=tartaruga)
	print("entrada: "a)
	print("animal: "b)
else:
	print("eu")
-- ERROR:
File "XXXX", line 3
    if:(a==2)and(b=tartaruga)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:03:49) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=tartaruga):
	print("entrada: "a)
	print("animal: "b)
else:
	print("eu")
-- ERROR:
File "XXXX", line 3
    if(a==2)and(b=tartaruga):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:05:06) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b="tartaruga"):
	print("entrada: "a)
	print("animal: "b)
else:
	print("eu")
-- ERROR:
File "XXXX", line 3
    if(a==2)and(b="tartaruga"):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:06:28) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: "a)
	print("animal: "b)
else:
	print("eu")
-- ERROR:
File "XXXX", line 4
    print("entrada: "a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:07:00) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: "a)
else:
	print("eu")
-- ERROR:
File "XXXX", line 4
    print("entrada: "a)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:07:10) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: ",a)
else:
	print("eu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:07:40) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: ",a)
	print("animal: ",b)
else:
	print("eu")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:11:20) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: ",a)
	print("animal: ",b)
elif(a==5)and(b==garca)
	print("entrada: ", a)
	print("animal: ", b)
else:
	print("entrada", a)
	print("animal: invalido ")
-- ERROR:
File "XXXX", line 6
    elif(a==5)and(b==garca)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:11:26) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: ",a)
	print("animal: ",b)
elif(a==5)and(b==garca):
	print("entrada: ", a)
	print("animal: ", b)
else:
	print("entrada", a)
	print("animal: invalido ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:11:44) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: ",a)
	print("animal: ",b)
elif(a==5)and(b=="garca"):
	print("entrada: ", a)
	print("animal: ", b)
else:
	print("entrada", a)
	print("animal: invalido ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 21:11:54) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: ",a)
	print("animal: ",b)
elif(a==5)and(b=="garca"):
	print("entrada: ", a)
	print("animal: ", b)
else:
	print("entrada", a)
	print("animal: invalido ")
-- EXECUTION TIME:
0.18437
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1100/main.py", line 2, in <module>
    b=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:12:04) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: ",a)
	print("animal: ",b)
elif(a==5)and(b=="garca"):
	print("entrada: ", a)
	print("animal: ", b)
else:
	print("entrada", a)
	print("animal: invalido ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:17:18) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: ",a)
	print("animal: ",b)
elif(a==5)and(b=="garca"):
	print("entrada: ", a)
	print("animal: ", b)
elif(a==10)and(b==arara)
	print("entrada: ",a)
	print("animal: ",b)
else:
	print("entrada", a)
	print("animal: invalido ")
-- ERROR:
File "XXXX", line 9
    elif(a==10)and(b==arara)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:17:27) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: ",a)
	print("animal: ",b)
elif(a==5)and(b=="garca"):
	print("entrada: ", a)
	print("animal: ", b)
elif(a==10)and(b==arara):
	print("entrada: ",a)
	print("animal: ",b)
else:
	print("entrada", a)
	print("animal: invalido ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:17:45) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="tartaruga"):
	print("entrada: ",a)
	print("animal: ",b)
elif(a==5)and(b=="garca"):
	print("entrada: ", a)
	print("animal: ", b)
elif(a==10)and(b=="arara"):
	print("entrada: ",a)
	print("animal: ",b)
else:
	print("entrada", a)
	print("animal: invalido ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:43:12) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="Tartaruga"):
	print("Entrada: ",a)
	print("Animal: ",b)
elif(a==5)and(b=="Garca"):
	print("Entrada: ", a)
	print("Animal: ", b)
elif(a==10)and(b=="Arara"):
	print("Entrada: ",a)
	print("Animal: ",b)
elif(a==20)and(b=="Mico-Leao-Dourado"):
	print("Entrada: ", a)
	print("Animal: ", b)
elif(a==50)and(b=="Onca-Pintada"):
	print("Entrada: ", a)
	print("Animal: ", b)
elif(a==100)and(b=="Garoupa"):
	print("Entrada: ", a)
	print("Animal: ", b)
else:
	print("entrada", a)
	print("animal: invalido ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 21:44:02) 
-- CODE:
a=int(input("valor da cedula: "))
b=input("nome do animal: ")
if(a==2)and(b=="Tartaruga"):
	print("Entrada: ",a)
	print("Animal: ",b)
elif(a==5)and(b=="Garca"):
	print("Entrada: ", a)
	print("Animal: ", b)
elif(a==10)and(b=="Arara"):
	print("Entrada: ",a)
	print("Animal: ",b)
elif(a==20)and(b=="Mico-Leao-Dourado"):
	print("Entrada: ", a)
	print("Animal: ", b)
elif(a==50)and(b=="Onca-Pintada"):
	print("Entrada: ", a)
	print("Animal: ", b)
elif(a==100)and(b=="Garoupa"):
	print("Entrada: ", a)
	print("Animal: ", b)
else:
	print("entrada", a)
	print("animal: invalido ")
-- EXECUTION TIME:
0.21164
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1100/main.py", line 2, in <module>
    b=input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:51:19) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado)
elif(a==50)):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada", a)
	print("animal: invalido ")
-- ERROR:
File "XXXX", line 13
    print("Animal: Mico-leao-dourado)
                                    ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:51:30) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50)):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada", a)
	print("animal: invalido ")
-- ERROR:
File "XXXX", line 14
    elif(a==50)):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 21:51:36) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada", a)
	print("animal: invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 21:51:42) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada", a)
	print("animal: invalido ")
-- EXECUTION TIME:
0.183615
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada 7
animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:40:31) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada", a)
	print("animal: invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:40:51) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada: a")
	print("animal: invalido ")
-- EXECUTION TIME:
0.146967
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada: a
animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:40:52) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada: a")
	print("animal: invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:41:17) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada: ",a)
	print("animal: invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:41:27) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada: ",a)
	print("animal: invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:41:45) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada: ",a)
	print("animal: invalido ")
-- EXECUTION TIME:
0.194163
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada:  7
animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 22:41:47) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada: ",a)
	print("animal: invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 22:41:52) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
else:
	print("entrada: ",a)
	print("animal: invalido ")
-- EXECUTION TIME:
0.191782
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada:  7
animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:07:11) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100):
	print("entrada: ",a)
	print("animal: invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:08:49) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100):
	print("entrada: ",a)
	print("animal: invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:08:58) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100):
	print("entrada: ",a)
	print("animal: invalido ")
-- EXECUTION TIME:
0.137624
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada:  7
animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:09:51) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100):
	print("entrada: ",a)
	print("animal: invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:10:18) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100):
	print("entrada: ",a)
	print("animal: Invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:10:31) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100):
	print("entrada: ",a)
	print("animal: Invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:10:33) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100):
	print("entrada: ",a)
	print("animal: Invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:10:40) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ", a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal:Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100):
	print("entrada: ",a)
	print("animal: Invalido ")
-- EXECUTION TIME:
0.159793
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada:  7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:11:27) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ",a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal: Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100):
	print("entrada: ",a)
	print("animal: Invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:11:33) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ",a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal: Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)or(a!=5)or(a!=10)or(a!=20)or(a!=50)or(a!=100):
	print("entrada: ",a)
	print("animal: Invalido ")
-- EXECUTION TIME:
0.177233
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada:  7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:12:08) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ",a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal: Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100):
	print("entrada: ",a)
	print("animal: Invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:12:16) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ",a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal: Arara ")
elif(a==20):
	print("Entrada: ", a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ", a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif (a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100):
	print("entrada: ",a)
	print("animal: Invalido ")
-- EXECUTION TIME:
0.200826
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada:  7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:12:35) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ",a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal: Arara ")
elif(a==20):
	print("Entrada: ",a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ",a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ",a)
	print("Animal: Garoupa")
elif (a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100):
	print("entrada: ",a)
	print("animal: Invalido ")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:12:43) 
-- CODE:
a=int(input("valor da cedula: "))
if(a==2):
	print("Entrada: ",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada: ",a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada: ",a)
	print("Animal: Arara ")
elif(a==20):
	print("Entrada: ",a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada: ",a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada: ",a)
	print("Animal: Garoupa")
elif (a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100):
	print("entrada: ",a)
	print("animal: Invalido ")
-- EXECUTION TIME:
0.220225
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
entrada:  7
animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:13:29) 
-- CODE:
a=int(input("valor da cedula:"))
if(a==2):
	print("Entrada:",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada:",a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada:",a)
	print("Animal: Arara ")
elif(a==20):
	print("Entrada:",a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada:",a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada:",a)
	print("Animal: Garoupa")
elif (a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100):
	print("Entrada:",a)
	print("Animal: Invalido ")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:13:35) 
-- CODE:
a=int(input("valor da cedula:"))
if(a==2):
	print("Entrada:",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada:",a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada:",a)
	print("Animal: Arara ")
elif(a==20):
	print("Entrada:",a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada:",a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada:",a)
	print("Animal: Garoupa")
elif (a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100):
	print("Entrada:",a)
	print("Animal: Invalido ")
-- EXECUTION TIME:
0.17585
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:13:58) 
-- CODE:
a=int(input("valor da cedula:"))
if(a==2):
	print("Entrada:",a)
	print("Animal: Tartaruga")
elif(a==5):
	print("Entrada:",a)
	print("Animal: Garca")
elif(a==10):
	print("Entrada:",a)
	print("Animal: Arara ")
elif(a==20):
	print("Entrada:",a)
	print("Animal: Mico-leao-dourado")
elif(a==50):
	print("Entrada:",a)
	print("Animal: Onca pintada")
elif(a==100):
	print("Entrada:",a)
	print("Animal: Garoupa")
elif (a!=2)and(a!=5)and(a!=10)and(a!=20)and(a!=50)and(a!=100):
	print("Entrada:",a)
	print("Animal: Invalido ")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:26:28) 
-- CODE:
a = int(input("qual o valor da nota? "))
if(a == 2):
	print("Entrada: ", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada: ", a)
	print("Animal:	Garça")
elif(a == 10):
	print("Entrada: ", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada: ", a)
	print("Animal:	Mico-leao-dourado")
elif(a == 50):
	print("Entrada: ", a)
	print("Animal: Onca-pintada")
elif(a == 100):
	print("Entrada: ", a)
	print("Animal: Garoupa")
elif(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
	print("Entrada: ", a)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.172201
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:28:52) 
-- CODE:
a=int(input("valor da cedula:"))
if(a == 2):
	print("Entrada:",a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada:",a)
	print("Animal: Garca")
elif(a == 10):
	print("Entrada:",a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada:",a)
	print("Animal: Mico-leao-dourado")
elif(a == 50):
	print("Entrada:",a)
	print("Animal: Onca pintada")
elif(a == 100):
	print("Entrada:",a)
	print("Animal: Garoupa")
elif(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
	print("Entrada:",a)
	print("Animal: Invalido ")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:28:55) 
-- CODE:
a=int(input("valor da cedula:"))
if(a == 2):
	print("Entrada:",a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada:",a)
	print("Animal: Garca")
elif(a == 10):
	print("Entrada:",a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada:",a)
	print("Animal: Mico-leao-dourado")
elif(a == 50):
	print("Entrada:",a)
	print("Animal: Onca pintada")
elif(a == 100):
	print("Entrada:",a)
	print("Animal: Garoupa")
elif(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
	print("Entrada:",a)
	print("Animal: Invalido ")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:29:03) 
-- CODE:
a=int(input("valor da cedula:"))
if(a == 2):
	print("Entrada:",a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada:",a)
	print("Animal: Garca")
elif(a == 10):
	print("Entrada:",a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada:",a)
	print("Animal: Mico-leao-dourado")
elif(a == 50):
	print("Entrada:",a)
	print("Animal: Onca pintada")
elif(a == 100):
	print("Entrada:",a)
	print("Animal: Garoupa")
elif(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
	print("Entrada:",a)
	print("Animal: Invalido ")
-- EXECUTION TIME:
0.203076
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:30:15) 
-- CODE:
a=int(input("valor da cedula:"))
if(a == 2):
	print("Entrada:", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada:", a)
	print("Animal: Garca")
elif(a == 10):
	print("Entrada:", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada:", a)
	print("Animal: Mico-leao-dourado")
elif(a == 50):
	print("Entrada:", a)
	print("Animal: Onca pintada")
elif(a == 100):
	print("Entrada:", a)
	print("Animal: Garoupa")
elif(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
	print("Entrada:", a)
	print("Animal: Invalido ")
-- EXECUTION TIME:
0.187776
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:30:29) 
-- CODE:
a=int(input("valor da cedula:"))
if(a == 2):
	print("Entrada:", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada:", a)
	print("Animal: Garca")
elif(a == 10):
	print("Entrada:", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada:", a)
	print("Animal: Mico-leao-dourado")
elif(a == 50):
	print("Entrada:", a)
	print("Animal: Onca pintada")
elif(a == 100):
	print("Entrada:", a)
	print("Animal: Garoupa")
elif(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
	print("Entrada:", a)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.14326
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:31:13) 
-- CODE:
a=int(input("valor da cedula:"))
if(a == 2):
	print("Entrada:", a)
	print("Animal: Tartaruga")
elif(a == 5):
	print("Entrada:", a)
	print("Animal: Garca")
elif(a == 10):
	print("Entrada:", a)
	print("Animal: Arara")
elif(a == 20):
	print("Entrada:", a)
	print("Animal: Mico-leao-dourado")
elif(a == 50):
	print("Entrada:", a)
	print("Animal: Onca-pintada")
elif(a == 100):
	print("Entrada:", a)
	print("Animal: Garoupa")
elif(a != 2) and (a != 5) and (a != 10) and (a != 20) and (a != 50) and (a != 100):
	print("Entrada:", a)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.128918
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
